Fix Link field not working in child table grid and edit view
- Add display:none to .link-btn-add globally to match working version
- Remove .form-grid-container overflow-x:auto that clipped awesomplete dropdown

--- a/datavalue_theme_15/public/scss/partials/_frappe.scss
+++ b/datavalue_theme_15/public/scss/partials/_frappe.scss
@@ -1132,6 +1132,7 @@ button.btn.btn-default {
     position: absolute;
     top: 0;
     right: 0;
+    display: none !important;
 
     .btn.btn-primary {
       width: 30px;
@@ -1386,10 +1387,6 @@ button.btn.btn-default {
 
 .grid-body .grid-static-col .form-control[data-fieldtype="Icon"] {
   padding-left: 35px !important;
-}
-
-.form-grid-container {
-  overflow-x: auto !important;
 }
 
 .form-grid {
